2017-03-17  Bruno Haible  <bruno@clisp.org>

	Don't test unportable features in "make check".
	* makemake.in: Generate a new target 'extracheck'. Let 'extracheck', not
	'check', depend on 'check-exec-image'.

2017-03-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure on Linux/arm.
	* arilev0.d (mulu32_, divu_3216_1616_, divu_3216_3216_, divu_3232_3232_,
	divu_6432_3232_, divu_6432_6432_, divu_6464_6464_): When defined in
	lisparit.o, add a suffix to the symbol. This avoids a link-time
	collision with ari*.o.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure on 64-bit HP-UX without -DNO_ARI_ASM.
	* lispbibl.d (HPPA64): New macro.
	* arilev0.d: Exclude HPPA64 when testing for HPPA.
	* intlog.d: Likewise.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure on 64-bit HP-UX with -DNO_ARI_ASM.
	* intlog.d (integerlength32) [HPPA]: Test NO_ARI_ASM, not NO_ASM.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Enable the '-mm' option also on HP-UX.
	* spvw_mmap.d (dump_process_memory_map_callback,
	dump_process_memory_map): Move from here...
	* spvw.d (dump_process_memory_map_callback, dump_process_memory_map):
	... to here.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure on HP-UX.
	* makemake.in (with_dynamic_modules): Default to 'no' on HP-UX.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure with HP-UX cc and Sun cc.
	* makemake.in: Compile the CPARTS and clisp-test.c with option "-I.".

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure on HP-UX/hppa.
	* arilev0.d (divu_6432_3232_): Test HPPA_DIV_WORKS, not HPPA.

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Fix build failure with HP-UX make.
	Apparently HP-UX make expects an absolute filename for SHELL.
	* makemake.in: For HP-UX, set SHELL to the absolute filename of bash,
	not just "bash".

2017-03-16  Bruno Haible  <bruno@clisp.org>

	Don't rely on unportable 'test file1 -nt file2' primitive.
	Fixes a build failure on OpenBSD.